deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "social-hub-certificate"
    kubernetes.io/ingress.global-static-ip-name: "content-hubs-social-hub-ip"
  name: social-hub-ingress
spec:
  defaultBackend:
    service:
      name: social-hub
      port:
        number: 80
